--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -38,7 +38,7 @@
     <tr>
         <td>Portfolio Website</td>
         <td>HTML</td>
-        <td><a href="https://noeliszambrano.github.io/portafolio/">View Project</a></td>
+        <td><a href="https://noeliszambrano.github.io/Login/">View Project</a></td>
     </tr>
 </table>
 </html>
