--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <li>Python Basic.</li>
     <li>Creativity, leadership, time management and problem solving.</li>
 </ul>
-<section>
-    <a href="https://noeliszambrano.github.io/portafolio/"><h2>Projects: </h2></a>
+<section><h2>Projects: </h2></a>
     <h3>Project 1: Portfolio Website.</h3>
     <p>This is my first project where I built a personal portfolio using only HTML.</p>
     <h3>Project 2: Log In.</h3>
@@ -36,9 +35,16 @@
         <th>Link</th>
     </tr>
     <tr>
-        <td>Portfolio Website</td>
-        <td>HTML</td>
-        <td><a href="https://noeliszambrano.github.io/portafolio/">View Project</a></td>
+        <td>Log In</td>
+        <td>HTML and CSS</td>
+        <td><a href="https://noeliszambrano.github.io/Login/">View Project</a></td>
     </tr>
 </table>
+<form action="/send" method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+</form>
 </html>
