--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="1" required></textarea>
+
+    <input type="submite" value="Send">
 </form>
 </html>
