--- a/index.html
+++ b/index.html
@@ -52,4 +52,10 @@
 
     <input type="submite" value="Send">
 </form>
+<a href="https://github.com/Noeliszambrano" target="_blank">Github</a>
+<nav>
+    <a href="#about-me">About Me</a>
+    <a href="#Projects">Projects</a>
+    <a href="#contact">Contact</a>
+</nav>
 </html>
