--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <p>Hello, my name is Noelis Zambrano.</p>
     <p>I like to learn and explore new things, although in many cases I am a victim of procrastination.</p>
     <p>Skills: Ease of learning if I'm truly interested in a topic and dedicate time to it, teamwork.
-       Location: Colombia.</p>
+        Location: Colombia.</p>
 </section>
-<img src="Noelis.jpg" alt="Noelis Zambrano 's photo" width="300">
+<img src="photo.webp" alt="Noelis Zambrano 's photo" width="300">
 <ul>
     <li>Python Basic.</li>
     <li>Creativity, leadership, time management and problem solving.</li>
@@ -52,10 +52,10 @@
 
     <input type="submite" value="Send">
 </form>
+<section><h2>Contact. </h2></section>
 <a href="https://github.com/Noeliszambrano" target="_blank">Github</a>
 <nav>
     <a href="#about-me">About Me</a>
     <a href="#Projects">Projects</a>
-    <a href="#contact">Contact</a>
 </nav>
 </html>
